--- a/main.css
+++ b/main.css
@@ -114,12 +114,13 @@
 }
 
 :root {
-  --accent-color: #FF002E;
+  --accent-color: #3AE8C6;
+  --accent-1: red;
   --bg-light-1: #f5f6f8;
   --bg-light-2: #F1F6F9;
   --bg-dark-1: #131419;
   --bg-dark-2: #1E2027;
-  --bg-dark-3: #0D0D12;
+  --bg-dark-3: #0A0A0F;
   --bg-dark-4: #0A0A0F;
   --font-light: rgb(197, 197, 197);
   --font-dark: #454545;
@@ -3569,8 +3570,8 @@ body.preloader-visible .preloader__progress {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 120%;
+  height: 120%;
   z-index: 5000;
   pointer-events: none;
   -webkit-user-select: none;
@@ -4634,6 +4635,7 @@ body.is-cursor-active * {
   padding-top: 16.25rem;
   padding-bottom: 5rem;
 }
+
 
 @media (max-width: 991px) {
   .masthead.-type-work-1 .masthead__content {
@@ -6066,7 +6068,7 @@ html.full-page-slider body {
 }
 
 .overlay-black-md::after {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .overlay-black-lg::after {
@@ -12400,3 +12402,4 @@ html.full-page-slider body {
     margin-left: 7rem;
   }
 }
+
