--- a/css/main.css
+++ b/css/main.css
@@ -114,13 +114,12 @@
 }
 
 :root {
-  --accent-color: #3AE8C6;
-  --accent-1: red;
-  --bg-light-1: #f5f6f8;
+  --accent-color: #F0802C;
+  --bg-light-1: #F6F6F6;
   --bg-light-2: #F1F6F9;
   --bg-dark-1: #131419;
   --bg-dark-2: #1E2027;
-  --bg-dark-3: #0A0A0F;
+  --bg-dark-3: #123740;
   --bg-dark-4: #0A0A0F;
   --font-light: rgb(197, 197, 197);
   --font-dark: #454545;
@@ -1084,6 +1083,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   color: black;
 }
+
 
 h1 {
   font-size: var(--text-6xl);
