--- a/css/main.css
+++ b/css/main.css
@@ -120,9 +120,9 @@
   --bg-dark-1: #131419;
   --bg-dark-2: #1E2027;
   --bg-dark-3: #123740;
-  --bg-dark-4: #0A0A0F;
+  --bg-dark-4: #123740;
   --font-light: rgb(197, 197, 197);
-  --font-dark: #454545;
+  --font-dark: #123740;
 }
 
 :root {
@@ -813,10 +813,25 @@ a:hover {
 }
 
 ul, li {
+  list-style: disc;
+  margin: 0;
+  padding: 0;
+}
+
+
+/* .services ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
+
+
+.services li::before {
+  content: "• ";
+  color: red;
+  padding-right: 10px;
+} */
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
