--- a/css/main.css
+++ b/css/main.css
@@ -808,13 +808,14 @@ a {
 }
 
 a:hover {
+  letter-spacing: .05rem;
   text-decoration: none;
   color: var(--accent-color);
 }
 
 ul, li {
   list-style: disc;
-  margin: 0;
+  margin-left: 10px;
   padding: 0;
 }
 
